--- a/LeetCode.csproj
+++ b/LeetCode.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aardvark.Base.FSharp" Version="5.2.2" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="LanguageExt.Core" Version="4.0.4" />
   </ItemGroup>
 
